<resources>
    <string name="app_name">Tour Guide</string>
    <string name="NYabout">New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean.\n At its core is Manhattan, a densely populated borough that’s among the world’s major commercial, financial and cultural centers.\n Its iconic sites include skyscrapers such as the Empire State Building and sprawling Central Park.\n Broadway theater is staged in neon-lit Times Square.</string>
    <string name="aboutName">New York</string>
    <string name="Cuisine">Cuisine</string>
    <string name="Bars">Bars</string>
    <string name="Hotels">Hotels</string>
    <string name="about">About The Place</string>
    <string name="TopAttractions">Top Attractions</string>
    <string name="tp1">Empire State Building</string>
    <string name="tp2">Brooklyn Bridge</string>
    <string name="tp3">Central Park</string>
    <string name="tp4">The Statue of Liberty</string>
    <string name="tp5">Old World Observatory</string>
    <string name="tp6">The Metropolitan Museum of Art</string>
    <string name="tp7">Chrysler Building</string>
    <string name="tp8">The High Line</string>
    <string name="tp9">The Grand Central Terminal</string>
    <string name="tp10">The 9/11 Memorial and Museum</string>
    <string name="b1">The Dead Rabbit</string>
    <string name="b2">Clover Club</string>
    <string name="b3"><![CDATA[Death & Company]]></string>
    <string name="b4">Pegu Club</string>
    <string name="b5">PDT</string>
    <string name="b6">Maison Premiere</string>
    <string name="b7">Tørst</string>
    <string name="b8">Attaboy</string>
    <string name="b9">Pouring Ribbons</string>
    <string name="b10">The NoMad Bar</string>
    <string name="c1">Ney York style Pizza</string>
    <string name="c2">Pork Bun</string>
    <string name="c3">The Classic</string>
    <string name="c4">Bagel and lox</string>
    <string name="c5">Callah</string>
    <string name="c6">Matzo ball soup</string>
    <string name="c7">Cronut</string>
    <string name="c8">Kielbasa</string>
    <string name="c9">Cheese Burger</string>
    <string name="c10">Chopped Cheese</string>
    <string name="h1">The NoMad Hotel</string>
    <string name="h2">The New York EDITION</string>
    <string name="h3">The Ludlow</string>
    <string name="h4">The Standard</string>
    <string name="h5">The Pierre</string>
    <string name="h6">The Plaza</string>
    <string name="h7">The Greenwich Hotel</string>
    <string name="h8">Wythe Hotel</string>
    <string name="h9">Grame-rcy Park Hotel</string>
    <string name="h10">The Smyth</string>
</resources>
